# earthquake-bot-rust

./: .gitignore  Cargo.toml  env.example
src/: db.rs  main.rs  time.rs  tweet.rs
src/cwb_api/: impls.rs  mod.rs  structs.rs
src/taiwan_map/: coordinates.rs  mod.rs
