[package]
name = "earthquake-bot"
version = "0.1.0"
authors = ["Andy Farrington <akfarrington210@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
egg-mode = { version = "0.16.0", default-features = false, features = ["rustls"]}
image = { version = "0.24.2", default-features = false, features = ["png"]}
reqwest = {version = "0.11.10", features = ["json", "serde_json"]}
serde = { version = "1.0.137", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
sled = "0.34.7"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"]}